--- a/src/app/pratiche/moduli/richiesta-rottura-suolo/richiesta-rottura-suolo.component.html
+++ b/src/app/pratiche/moduli/richiesta-rottura-suolo/richiesta-rottura-suolo.component.html
@@ -752,7 +752,7 @@
                     <mat-error>{{getErrorMessage(form.get('details').get('building_site').get('area_number'))}}</mat-error>
                 </mat-form-field>
             </ng-container>
-            <div class="div-full padding-div">Il richiedente si impegna a costituire, a titolo di cauzione</div>
+            <div class="div-full padding-div">Il richiedente si impegna a costituire, a titolo di cauzione, una polizza fidejussoria</div>
             <ng-container formGroupName="insurance">
                 <div class="div-checkbox div-half">
                     <mat-checkbox formControlName="surety">Conferma la sottoscrizione della poliza</mat-checkbox>
