--- a/src/app/pratiche/moduli/richiesta-rottura-suolo/richiesta-rottura-suolo.component.html
+++ b/src/app/pratiche/moduli/richiesta-rottura-suolo/richiesta-rottura-suolo.component.html
@@ -42,6 +42,9 @@
             <mat-form-field class="div-half" appearance="outline">
                 <mat-label>Codice fiscale</mat-label>
                 <input formControlName="fiscal_code" matInput type="text">
+                <button [disabled]="form.get(['owner', 'fiscal_code']).invalid" mat-icon-button matSuffix (click)="calculateValueFromFiscalCode(form.get('owner'))">
+                    <mat-icon>post_add</mat-icon>
+                </button>
                 <mat-error>{{getErrorMessage(form.get('owner').get('fiscal_code'))}}</mat-error>
             </mat-form-field>
             <mat-form-field class="div-half" appearance="outline">
@@ -70,14 +73,14 @@
                 <mat-error>{{getErrorMessage(form.get('owner').get('document_number'))}}</mat-error>
             </mat-form-field>
             <mat-form-field class="div-a-third" appearance="outline">
-                <mat-label>Provincia di nascita (o Stato estero)</mat-label>
-                <input formControlName="county_of_birth" matInput type="text">
-                <mat-error>{{getErrorMessage(form.get('owner').get('county_of_birth'))}}</mat-error>
-            </mat-form-field>
-            <mat-form-field class="div-a-third" appearance="outline">
-                <mat-label>Comune di nascita</mat-label>
+                <mat-label>Comune di nascita (o Stato estero)</mat-label>
                 <input formControlName="birthplace" matInput type="text">
                 <mat-error>{{getErrorMessage(form.get('owner').get('birthplace'))}}</mat-error>
+            </mat-form-field>
+            <mat-form-field class="div-a-third" appearance="outline">
+                <mat-label>Provincia di nascita</mat-label>
+                <input formControlName="county_of_birth" matInput type="text">
+                <mat-error>{{getErrorMessage(form.get('owner').get('county_of_birth'))}}</mat-error>
             </mat-form-field>
             <mat-form-field class="div-a-third" appearance="outline">
                 <mat-label>Data di nascita</mat-label>
@@ -555,7 +558,7 @@
             <mat-error>{{getErrorMessage(form.get('business_administrator'))}}</mat-error>
         </mat-expansion-panel>
         <div class="div-radio-group">
-            <mat-label>Esecutore dei lavori:</mat-label>
+            <mat-label>Esecuzione dei lavori:</mat-label>
             <mat-radio-group formControlName="work_supplier" class="vartical-radiobutton"
             (change)="changeEsecutore($event, form.get('supplier_business'))">
               <ng-container *ngFor="let esecutore of esecutori">
