--- a/src/assets/css/form-style.scss
+++ b/src/assets/css/form-style.scss
@@ -105,9 +105,9 @@ mat-radio-button{
     margin-left: 1em;
 }
 
-.mat-form-field-disabled{
-    display: none !important;
-}
+// .mat-form-field-disabled{
+//     display: none !important;
+// }
 
 .upload-button .mat-raised-button {
     background-color: #3f51b5;
