--- a/src/app/pratiche/moduli/richiesta-rottura-suolo/richiesta-rottura-suolo.component.html
+++ b/src/app/pratiche/moduli/richiesta-rottura-suolo/richiesta-rottura-suolo.component.html
@@ -42,7 +42,9 @@
             <mat-form-field class="div-half" appearance="outline">
                 <mat-label>Codice fiscale</mat-label>
                 <input formControlName="fiscal_code" matInput type="text">
-                <button [disabled]="form.get(['owner', 'fiscal_code']).invalid" mat-icon-button matSuffix (click)="calculateValueFromFiscalCode(form.get('owner'))">
+                <button [disabled]="form.get(['owner', 'fiscal_code']).invalid" mat-icon-button matSuffix
+                (click)="calculateValueFromFiscalCode(form.get('owner'))"
+                matTooltip="Autocompila i campi">
                     <mat-icon>post_add</mat-icon>
                 </button>
                 <mat-error>{{getErrorMessage(form.get('owner').get('fiscal_code'))}}</mat-error>
