aggiunta modifica di nome

--- a/src/app/pratiche/moduli/richiesta-rottura-suolo/richiesta-rottura-suolo.component.html
+++ b/src/app/pratiche/moduli/richiesta-rottura-suolo/richiesta-rottura-suolo.component.html
@@ -3,10 +3,10 @@
         <mat-expansion-panel formGroupName="owner" class="referente-group" expanded>
             <mat-expansion-panel-header>
                 <mat-panel-title>
-                  Referente 
+                  Proprietario 
                 </mat-panel-title>
                 <mat-panel-description>
-                  Compilare con i dati anagrafici del referente
+                  Compilare con i dati anagrafici del proprietario
                 </mat-panel-description>
             </mat-expansion-panel-header>
             <mat-form-field class="div-half" appearance="outline">
