fix marca da bollo

--- a/src/app/pratiche/moduli/richiesta-rottura-suolo/richiesta-rottura-suolo.component.html
+++ b/src/app/pratiche/moduli/richiesta-rottura-suolo/richiesta-rottura-suolo.component.html
@@ -852,8 +852,8 @@
             </mat-card-subtitle>
             <mat-card-content>
                 <mat-form-field class="div-full" appearance="outline">
-                    <mat-label>Marca da bollo:</mat-label>
-                    <input formControlName="stamp_number" matInput type="email">
+                    <mat-label>Marca da bollo</mat-label>
+                    <input formControlName="stamp_number" matInput type="text">
                     <mat-hint>Inserire il codice della marca da bollo</mat-hint>
                     <mat-error>{{getErrorMessage(form.get('stamp_number'))}}</mat-error>
                 </mat-form-field>
