fix alla struttura

--- a/src/assets/css/form-style.scss
+++ b/src/assets/css/form-style.scss
@@ -85,21 +85,21 @@ mat-checkbox.ng-invalid .mat-checkbox-frame {
     border-color: rgb(244, 67, 54);
 }
 
-mat-expansion-panel.ng-invalid {
-    border-left: solid 2px red;
-}
+// mat-expansion-panel.ng-invalid {
+//     border-left: solid 2px red;
+// }
 
-mat-card.ng-invalid {
-    border-left: solid 2px red;
-}
+// mat-card.ng-invalid {
+//     border-left: solid 2px red;
+// }
 
-mat-expansion-panel.ng-valid{
-    border-left: solid 2px green;
-}
+// mat-expansion-panel.ng-valid{
+//     border-left: solid 2px green;
+// }
 
-mat-card.ng-ivalid {
-    border-left: solid 2px green;
-}
+// mat-card.ng-ivalid {
+//     border-left: solid 2px green;
+// }
 
 mat-radio-button{
     margin-left: 1em;
