--- a/src/app/pratiche/moduli/richiesta-rottura-suolo/richiesta-rottura-suolo.component.html
+++ b/src/app/pratiche/moduli/richiesta-rottura-suolo/richiesta-rottura-suolo.component.html
@@ -163,7 +163,7 @@
                         </mat-form-field>
                         <mat-form-field class="div-half" appearance="outline">
                             <mat-label>Telefono</mat-label>
-                            <input formControlName="phone" matInput type="number">
+                            <input formControlName="phone" matInput type="text">
                             <mat-error>{{getErrorMessage(formContactsOwner.controls[i].get('phone'))}}</mat-error>
                         </mat-form-field>
                         <mat-form-field class="div-half" appearance="outline">
@@ -179,24 +179,24 @@
                 </mat-expansion-panel>
                 <mat-form-field class="div-half" appearance="outline">
                     <mat-label>Telefono</mat-label>
-                    <input formControlName="phone" matInput type="number" (change)="check(form.get('owner'), 'phone','cellular')">
+                    <input formControlName="phone" matInput type="text" (change)="check(form.get('owner'), 'phone','cellular')">
                     <mat-error>{{getErrorMessage(form.get('owner').get('phone'))}}</mat-error>
                 </mat-form-field>
-                <mat-form-field class="div-half" appearance="outline">
+                <!-- <mat-form-field class="div-half" appearance="outline">
                     <mat-label>Cellulare</mat-label>
                     <input formControlName="cellular" matInput type="number" (change)="check(form.get('owner'), 'cellular','phone')">
                     <mat-error>{{getErrorMessage(form.get('owner').get('cellular'))}}</mat-error>
-                </mat-form-field>
+                </mat-form-field> -->
                 <mat-form-field class="div-half" appearance="outline">
                     <mat-label>Email</mat-label>
                     <input formControlName="email" matInput type="email">
                     <mat-error>{{getErrorMessage(form.get('owner').get('email'))}}</mat-error>
                 </mat-form-field>
-                <mat-form-field class="div-half" appearance="outline">
+                <!-- <mat-form-field class="div-half" appearance="outline">
                     <mat-label>PEC</mat-label>
                     <input formControlName="pec" matInput type="email">
                     <mat-error>{{getErrorMessage(form.get('owner').get('pec'))}}</mat-error>
-                </mat-form-field>
+                </mat-form-field> -->
                 <mat-error>{{getErrorMessage(form.get('owner'))}}</mat-error>
             </ng-container>
         </mat-expansion-panel>
@@ -303,7 +303,7 @@
                     </mat-form-field>
                     <mat-form-field class="div-half" appearance="outline">
                         <mat-label>Telefono</mat-label>
-                        <input formControlName="phone" matInput type="number">
+                        <input formControlName="phone" matInput type="text">
                         <mat-error>{{getErrorMessage(formContactsExpert.controls[i].get('phone'))}}</mat-error>
                     </mat-form-field>
                     <mat-form-field class="div-half" appearance="outline">
@@ -319,7 +319,7 @@
             </mat-expansion-panel>
             <mat-form-field class="div-half" appearance="outline">
                 <mat-label>Telefono</mat-label>
-                <input formControlName="phone" matInput type="number" (change)="check(form.get('expert'), 'phone','cellular')">
+                <input formControlName="phone" matInput type="text" (change)="check(form.get('expert'), 'phone','cellular')">
                 <mat-error>{{getErrorMessage(form.get('expert').get('phone'))}}</mat-error>
             </mat-form-field>
             <mat-form-field class="div-half" appearance="outline">
@@ -464,7 +464,7 @@
                         </mat-form-field>
                         <mat-form-field class="div-half" appearance="outline">
                             <mat-label>Telefono</mat-label>
-                            <input formControlName="phone" matInput type="number">
+                            <input formControlName="phone" matInput type="text">
                             <mat-error>{{getErrorMessage(getArray('experts/'+j+'/contacts').controls[i].get('phone'))}}</mat-error>
                         </mat-form-field>
                         <mat-form-field class="div-half" appearance="outline">
@@ -480,24 +480,24 @@
                 </mat-expansion-panel>
                 <mat-form-field class="div-half" appearance="outline">
                     <mat-label>Telefono</mat-label>
-                    <input formControlName="phone" matInput type="number" (change)="check(formExperts.controls[j], 'phone','cellular')">
+                    <input formControlName="phone" matInput type="text" (change)="check(formExperts.controls[j], 'phone','cellular')">
                     <mat-error>{{getErrorMessage(formExperts.controls[j].get('phone'))}}</mat-error>
                 </mat-form-field>
-                <mat-form-field class="div-half" appearance="outline">
+                <!-- <mat-form-field class="div-half" appearance="outline">
                     <mat-label>Cellulare</mat-label>
                     <input formControlName="cellular" matInput type="number" (change)="check(formExperts.controls[j], 'cellular','phone')">
                     <mat-error>{{getErrorMessage(formExperts.controls[j].get('cellular'))}}</mat-error>
-                </mat-form-field>
+                </mat-form-field> -->
                 <mat-form-field class="div-half" appearance="outline">
                     <mat-label>Email</mat-label>
                     <input formControlName="email" matInput type="email">
                     <mat-error>{{getErrorMessage(formExperts.controls[j].get('email'))}}</mat-error>
                 </mat-form-field>
-                <mat-form-field class="div-half" appearance="outline">
+                <!-- <mat-form-field class="div-half" appearance="outline">
                     <mat-label>PEC</mat-label>
                     <input formControlName="pec" matInput type="email">
                     <mat-error>{{getErrorMessage(formExperts.controls[j].get('pec'))}}</mat-error>
-                </mat-form-field>
+                </mat-form-field> -->
                 <mat-error>{{getErrorMessage(formExperts.controls[j])}}</mat-error>
                 <button class="button-delete" mat-mini-fab color="warn" (click)="removeItem(formExperts, j);"><mat-icon>close</mat-icon></button>
             </mat-card>
@@ -602,7 +602,7 @@
             </ng-container>
             <mat-form-field class="div-half" appearance="outline">
                 <mat-label>Telefono</mat-label>
-                <input formControlName="phone" matInput type="number">
+                <input formControlName="phone" matInput type="text">
                 <mat-error>{{getErrorMessage(form.get('business_administrator').get('phone'))}}</mat-error>
             </mat-form-field>
             <mat-form-field class="div-half" appearance="outline">
@@ -700,7 +700,7 @@
                     </mat-form-field>
                     <mat-form-field class="div-half" appearance="outline">
                         <mat-label>Telefono</mat-label>
-                        <input formControlName="phone" matInput type="number">
+                        <input formControlName="phone" matInput type="text">
                         <mat-error>{{getErrorMessage(formContactsDitta.controls[i].get('phone'))}}</mat-error>
                     </mat-form-field>
                     <mat-form-field class="div-half" appearance="outline">
@@ -716,7 +716,7 @@
             </mat-expansion-panel>
             <mat-form-field class="div-half" appearance="outline">
                 <mat-label>Telefono</mat-label>
-                <input formControlName="phone" matInput type="number" (change)="check(form.get('supplier_business'), 'phone','cellular')">
+                <input formControlName="phone" matInput type="text" (change)="check(form.get('supplier_business'), 'phone','cellular')">
                 <mat-error>{{getErrorMessage(form.get('supplier_business').get('phone'))}}</mat-error>
             </mat-form-field>
             <mat-form-field class="div-half" appearance="outline">
