--- a/src/app/pratiche/moduli/richiesta-rottura-suolo/richiesta-rottura-suolo.component.html
+++ b/src/app/pratiche/moduli/richiesta-rottura-suolo/richiesta-rottura-suolo.component.html
@@ -179,7 +179,7 @@
                 </mat-expansion-panel>
                 <mat-form-field class="div-half" appearance="outline">
                     <mat-label>Telefono</mat-label>
-                    <input formControlName="phone" matInput type="text" (change)="check(form.get('owner'), 'phone','cellular')">
+                    <input formControlName="phone" matInput type="text" >
                     <mat-error>{{getErrorMessage(form.get('owner').get('phone'))}}</mat-error>
                 </mat-form-field>
                 <!-- <mat-form-field class="div-half" appearance="outline">
@@ -480,7 +480,7 @@
                 </mat-expansion-panel>
                 <mat-form-field class="div-half" appearance="outline">
                     <mat-label>Telefono</mat-label>
-                    <input formControlName="phone" matInput type="text" (change)="check(formExperts.controls[j], 'phone','cellular')">
+                    <input formControlName="phone" matInput type="text">
                     <mat-error>{{getErrorMessage(formExperts.controls[j].get('phone'))}}</mat-error>
                 </mat-form-field>
                 <!-- <mat-form-field class="div-half" appearance="outline">
@@ -716,7 +716,7 @@
             </mat-expansion-panel>
             <mat-form-field class="div-half" appearance="outline">
                 <mat-label>Telefono</mat-label>
-                <input formControlName="phone" matInput type="text" (change)="check(form.get('supplier_business'), 'phone','cellular')">
+                <input formControlName="phone" matInput type="text" >
                 <mat-error>{{getErrorMessage(form.get('supplier_business').get('phone'))}}</mat-error>
             </mat-form-field>
             <mat-form-field class="div-half" appearance="outline">
