--- a/src/app/nuova-pratica/nuova-pratica.component.html
+++ b/src/app/nuova-pratica/nuova-pratica.component.html
@@ -16,7 +16,7 @@
       </div>
     </form>
   </mat-step>
-  <mat-step [stepControl]="secondFormGroup">
+  <!-- <mat-step [stepControl]="secondFormGroup">
     <form [formGroup]="secondFormGroup">
       <ng-template matStepLabel>Informazioni relativi alla nuova pratica</ng-template>
       <mat-form-field class="div-full" appearance="outline">
@@ -34,17 +34,17 @@
         <button mat-button matStepperNext>Avanti</button>
       </div>
     </form>
-  </mat-step>
+  </mat-step> -->
   <mat-step>
     <ng-template matStepLabel>Riepilogo</ng-template>
       <p>Confermi i seguenti dati?</p>
       <p><strong>Tipo pratica: </strong> {{getPratica()}}</p>
-      <p><strong>Oggetto: </strong> {{secondFormGroup.value.oggetto}}</p>
-      <p><strong>Descrizione: </strong> {{secondFormGroup.value.descrizione}}</p>
+      <!-- <p><strong>Oggetto: </strong> {{secondFormGroup.value.oggetto}}</p>
+      <p><strong>Descrizione: </strong> {{secondFormGroup.value.descrizione}}</p> -->
     <div>
       <button mat-button matStepperPrevious>Indietro</button>
       <button mat-button (click)="stepper.reset()">Reset</button>
-      <button mat-button [disabled]="(!firstFormGroup.valid && !secondFormGroup.valid)" (click)="submit()">Conferma</button>
+      <button mat-button [disabled]="!firstFormGroup.valid" (click)="submit()">Conferma</button>
     </div>
   </mat-step>
 </mat-vertical-stepper>
