semplificazione sul routing ed eliminazione della struttura per salvataggio parziale delle pratiche

--- a/src/app/pratiche/moduli/richiesta-rottura-suolo/richiesta-rottura-suolo.component.html
+++ b/src/app/pratiche/moduli/richiesta-rottura-suolo/richiesta-rottura-suolo.component.html
@@ -979,6 +979,6 @@
                 <mat-error>{{getErrorMessage(form.get('allegati_pratica').get('polizza_fidejussoria'))}}</mat-error>
             </mat-card>
         </mat-expansion-panel> -->
-        <button class="button-login" mat-raised-button color="primary" (click)="save($event)">Salva</button>
+        <!-- <button class="button-login" mat-raised-button color="primary" (click)="save($event)">Salva</button> -->
         <button class="button-login" mat-raised-button color="primary" (click)="submit()">Convalida</button>
     </form>
