--- a/src/app/pratiche/modulo/modulo.component.html
+++ b/src/app/pratiche/modulo/modulo.component.html
@@ -1,1 +1,1 @@
-<ng-container dynamicForm [modulo]="idModulo" [idPratica]="idPratica" (saved)="saveEvent($event)"></ng-container>
+<ng-container dynamicForm [modulo]="idModulo" (saved)="saveEvent($event)"></ng-container>
