--- a/src/app/pratiche/moduli/richiesta-rottura-suolo/richiesta-rottura-suolo.component.html
+++ b/src/app/pratiche/moduli/richiesta-rottura-suolo/richiesta-rottura-suolo.component.html
@@ -852,7 +852,21 @@
                 <input matInput formControlName="particella_catasto" type="number">
                 <mat-error>{{getErrorMessage(form.get('details').get('particella_catasto'))}}</mat-error>
             </mat-form-field> -->
-            <button class="button-login" mat-raised-button color="primary" (click)="openMap()">Apri mappa</button>
+            <div class="div-a-quarter" appearance="outline">
+                <mat-label>N. geometrie scavo</mat-label>
+                <input matInput readonly="true" type="number" [value]="form.get(['details','excavation_details', 'geometry']).value.length > 0 ? form.get(['details','excavation_details', 'geometry']).value.length : '/'">
+                <mat-error>{{getErrorMessage(form.get(['details','excavation_details', 'geometry']))}}</mat-error>
+            </div>
+            <div class="div-a-quarter" appearance="outline">
+                <mat-label>N. geometrie cantiere</mat-label>
+                <input matInput readonly="true" type="number" [value]="form.get(['details','building_site', 'geometry']).value.length > 0 ? form.get(['details','building_site', 'geometry']).value.length : '/'">
+                <mat-error>{{getErrorMessage(form.get(['details','building_site', 'geometry']))}}</mat-error>
+            </div>
+            
+            <div class="div-half">
+                <button class="button-login" mat-raised-button color="primary" (click)="openMap()">Disegna aree di occupazione</button>
+            </div>
+            
         </mat-expansion-panel>
         <mat-card>
             <mat-card-subtitle>
