--- a/src/app/mie-pratiche/mie-pratiche.component.html
+++ b/src/app/mie-pratiche/mie-pratiche.component.html
@@ -44,5 +44,5 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
   
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+    <mat-paginator [pageIndex]="data.meta.pagination.current_page" [pageSize]="data.meta.pagination.per_page" [length]="data.meta.pagination.total" showFirstLastButtons></mat-paginator>
   </div>
