--- a/src/app/mie-pratiche/mie-pratiche.component.html
+++ b/src/app/mie-pratiche/mie-pratiche.component.html
@@ -1,44 +1,49 @@
 <div class="mat-elevation-z8">
     <table mat-table [dataSource]="dataSource">
   
-      <!-- Position Column -->
+     
       <ng-container matColumnDef="number">
         <th mat-header-cell *matHeaderCellDef>N. pratica</th>
         <td mat-cell *matCellDef="let element"> {{element.number}} </td>
       </ng-container>
-      <!-- Position Column -->
+     
       <ng-container matColumnDef="protocol">
         <th mat-header-cell *matHeaderCellDef>N. protocollo</th>
         <td mat-cell *matCellDef="let element"> {{element.protocol}} </td>
       </ng-container>
   
-      <!-- Name Column -->
+     
       <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef> Stato </th>
         <td mat-cell *matCellDef="let element"> <status-procedures [status]="element.status"></status-procedures> </td>
       </ng-container>
   
-      <!-- Weight Column -->
+      
       <ng-container matColumnDef="category">
         <th mat-header-cell *matHeaderCellDef> Categoria </th>
         <td mat-cell *matCellDef="let element"> {{element.category | categoryPipe}} </td>
       </ng-container>
 
-      <!-- Symbol Column -->
+      
       <ng-container matColumnDef="referrer">
         <th mat-header-cell *matHeaderCellDef> Referente </th>
         <td mat-cell *matCellDef="let element"> {{element.referrer.name ? element.referrer.name : (element.referrer.first_name + ' '+ element.referrer.last_name) }} </td>
       </ng-container>
 
-      <!-- Symbol Column -->
+      
       <ng-container matColumnDef="all_mandatory_documents_uploaded">
         <th mat-header-cell *matHeaderCellDef> Documenti </th>
         <td mat-cell *matCellDef="let element"><documents-uploaded [doucuments_uploaded]="element.all_mandatory_documents_uploaded"></documents-uploaded></td>
-          <!-- <mat-icon [color]="(element.all_mandatory_documents_uploaded | documentsUploaded)['color']" 
-            [matTooltip]="(element.all_mandatory_documents_uploaded | documentsUploaded)['tooltip']">
-            {{(element.all_mandatory_documents_uploaded | documentsUploaded)['icon']}}
-          </mat-icon>  -->
       </ng-container>
+
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef> Azioni </th>
+        <td mat-cell *matCellDef="let element" >
+          <button mat-icon-button matTooltip="Visualizza dettagli"><mat-icon>launch</mat-icon> </button>
+          <button mat-icon-button matTooltip="Modifica"><mat-icon>edit</mat-icon></button>
+          <button mat-icon-button matTooltip="Elimina la pratica"><mat-icon>delete</mat-icon> </button>
+        </td>
+      </ng-container> 
       
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
